--- a/style.css
+++ b/style.css
@@ -69,6 +69,7 @@ button::selection {
   overflow: hidden;
   background-color: #242f42;
   box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  width: 100%;
 }
 
 .topnav a {
