--- a/style.css
+++ b/style.css
@@ -92,6 +92,7 @@ button::selection {
 .topnav a.active {
   background-color: #2196F3;
   color: white;
+  border-bottom: 1px solid #2196F3;
 }
 .topnav a.active:hover {
     opacity: 80.0%;
