--- a/style.css
+++ b/style.css
@@ -328,7 +328,7 @@ button::selection {
 /* Change color of dropdown links on hover */
 .dropdown-content a:hover {
   background-color: #1f2b3d;
-  text-decoration: underline;
+  border-bottom: none;
 }
 
 /* Show the dropdown menu (use JS to add this class to the .dropdown-content container when the user clicks on the dropdown button) */
