--- a/style.css
+++ b/style.css
@@ -1,416 +1,82 @@
 body {
-    color: white;
-    background-color: #192229;
     font-family: sans-serif;
     font-weight: 300;
+    background: rgb(29, 29, 29);
+    color: white;
     padding: 0;
     margin: 0;
 }
 
-.btn1 {
-    padding: 15px;
-    border: 1px #2d3d4a solid;
-    background-color: #2d3d4a;
-    font-family: sans-serif;
+h1,h2,h3,h4,h5 {
     font-weight: 300;
-    cursor: pointer;
+}
+
+p {
+    font-size: 11px;
+}
+
+.main {
+    padding: 20px;
+}
+
+.container {
+    background: rgb(29, 29, 29);
+    padding: 30px;
+    display: inline-block;
+    cursor: default;
     color: white;
-    border-radius: 5px;
     transition: 0.25s;
-    width: 120px;
-    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    width: 300px;
+    height: 200px;
+    box-shadow: 3px 3px 3px 3px 3px rgb(20, 20, 20);
+    margin-right: 10px;
+    cursor: pointer;
+    border: 1px solid rgb(56, 56, 56);
 }
-.btn1:hover {
-    border-radius: 0;
-    border-color: #3196e8;
-    margin-bottom: 10;
+.container:hover {
+    width: 289;
+    height: 189;
+    box-shadow: 2px 2px 2px 2px 2px rgb(20, 20, 20);
+    border: 1px solid rgb(70, 70, 70);
 }
 
-*::selection {
-    background: #192229;
-}
-
-.a1 {
+.link {
+    color: rgb(5, 113, 255);
     text-decoration: none;
-    color: #3196e8;
-    font-weight: 200;
     cursor: pointer;
 }
-.a1:hover {
-    text-decoration: underline;
+
+.navbar {
+    padding: 15px;
+    background: rgb(29, 29, 29);
 }
-
-#iframe {
-    border: #3196e8 1px solid;
-    border-radius: 25px;
-    color: black;
-}
-
-.head1 {
-    font-weight: 200;
-}
-
-button::selection {
-    background: none;
-}
-*:focus {
-    outline: none;
-}
-
-
-
-/* --------------
- for the navbar 
----------------*/
-
-
-
-.topnav {
-  overflow: hidden;
-  background-color: #242f42;
-  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-  width: 100%;
-}
-
-.topnav a {
-  float: left;
-  display: block;
-  color: white;
-  text-align: center;
-  padding: 14px 16px;
-  text-decoration: none;
-  font-size: 10px;
-  transition: 0.25s;
-  cursor: pointer;
-  border-bottom: 1px solid #242f42;
-}
-
-.topnav a:hover {
-  border-bottom: 1px solid white;
-}
-
-.topnav a.active {
-  color: white;
-  border-bottom: 1px solid white;
-}
-.topnav a.active:hover {
-    opacity: 80.0%;
-}
-
-.topnav .login-container {
-  float: right;
-}
-
-.topnav input[type=text] {
-  padding: 6px;
-  margin-top: 8px;
-  font-size: 10px;
-  border: none;
-  width:120px;
-  border: #2d3d4a 1px solid;
-  background: none;
-  caret-color: white;
-  color: white;
-  margin-right: 1;
-}
-.topnav input[type="text"]:focus {
-    border-color: #3196e8;
-}
-
-.topnav input[type=password] {
-  padding: 6px;
-  margin-top: 8px;
-  font-size: 10px;
-  border: none;
-  width:120px;
-  border: #2d3d4a 1px solid;
-  background: none;
-  caret-color: white;
-  color: white;
-}
-.topnav input[type="password"]:focus {
-    border-color: #3196e8;
-}
-
-.topnav .login-container button {
-  float: right;
-  padding: 6px 10px;
-  margin-top: 8px;
-  margin-right: 16px;
-  background: none;
-  color: white;
-  font-size: 10px;
-  font-weight: 200;
-  border: none;
-  cursor: pointer;
-  transition: 0.25s;
-  border-top-right-radius: 6px;
-  border-bottom-right-radius: 6px;
-  border: #2d3d4a 1px solid;
-  height: 25px;
-}
-
-.topnav .login-container button:hover {
-    color: #3196e8;
-    border-color: #3196e8;
-}
-
-@media screen and (max-width: 600px) {
-  .topnav .login-container {
-    float: none;
-  }
-  .topnav a, .topnav input[type=text], .topnav .login-container button {
-    float: none;
-    display: none;
-    text-align: left;
-    width: 100%;
-    margin: 0;
-    padding: 14px;
-    border-top-right-radius: 0px;
-    border-bottom-right-radius: 0px;
-  }
-
-  .topnav input[type=text] {
-  }
-
-    .topnav a, .topnav input[type=password], .topnav .login-container button {
-    float: none;
-    display: none;
-    text-align: left;
-    width: 100%;
-    margin: 0;
-    padding: 14px;
-    border-top-right-radius: 0px;
-    border-bottom-right-radius: 0px;
-  }
-  .topnav input[type=password] {
-  }
-
-  .display {
-    display: none;
-  }
-
-  .topnav {
-    width: 100%;
-    display: none;
-  }
-
-  #demo2 {
+.link-nav {
+    color: rgb(53, 124, 255);
+    border-bottom: 2px solid rgb(29, 29, 29);
     cursor: pointer;
-    text-align: center;
-    margin-bottom: 10px;
-    visibility: hidden;
-  }
-  #demo2:hover {
-    text-decoration: underline;
-  }
+    text-decoration: none;
+    font-family: Brutal Type, sans-serif;
+    transition: 0.25s;
+    margin-left: 6px;
+    font-weight: 300;
+    border: 1px solid transparent;
 
-  #demo3 {
-    cursor: pointer;
-    text-align: center;
-    margin-bottom: 10px;
-    display: none;
-  }
-  #demo3:hover {
-    text-decoration: underline;
-  }
+    padding: 11px;
+}
+.link-nav:hover {
+    border-bottom-color: rgb(53, 124, 255);
+}
+.link-nav:focus {
+    border: 1px solid rgb(53, 124, 255);
+}
 
-  #btn {
+#title:hover {
+    border: 1px solid transparent;
+}
+#title:focus {
     border: none;
-    text-align: center;
-    margin-top: 13px;
-  } 
-
-  .phoneBtn {
-    display: block;
-  }
-
-
-  .topnav a {
-    display: none;
-  }
-
-  .topnav a.display {
-    display: none;
-    visibility: hidden;
-  }
-
-  .topnav a#active {
-    display: block;
-  }
 }
 
-/* other */
-
-.gameAn {
-    padding: 10px;
-}
-
-#demo2 {
-    float: right;
-    margin-top: 14px;
-    margin-right: 30px;
-    cursor: pointer;
-}
-#demo2:hover {
-  text-decoration: underline;
-}
-
-/* hahaha mundial ranoldinho saucer!! */
-
-.p {
-  cursor: pointer;
-}
-
-
-.phoneBtn {
-  display: none;
-}
-
-
-
-
-
-/* yes */
-
-
-
-
-
-
-
-
-.dropbtn {
-  background-color: #3498DB;
-  color: white;
-  padding: 16px;
-  font-size: 16px;
-  border: none;
-  cursor: pointer;
-}
-
-/* Dropdown button on hover & focus */
-.dropbtn:hover, .dropbtn:focus {
-  background-color: #2980B9;
-}
-
-/* The container <div> - needed to position the dropdown content */
-.dropdown {
-  position: relative;
-  display: inline-block;
-}
-
-/* Dropdown Content (Hidden by Default) */
-.dropdown-content {
-  display: none;
-  position: absolute;
-  background-color: #2d3d4a;
-  min-width: 160px;
-  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-  z-index: 1;
-  margin-left: 194px;
-  margin-top: 40px;
-  color: white;
-  transition: 0.25s;
-}
-
-/* Links inside the dropdown */
-.dropdown-content a {
-  color: white;
-  text-decoration: none;
-  display: block;
-  width: 80%;
-  height: 10px;
-  text-align: left;
-  transition: none;
-  border-bottom: none;
-}
-
-/* Change color of dropdown links on hover */
-.dropdown-content a:hover {
-  background-color: #1f2b3d;
-  border-bottom: none;
-}
-
-/* Show the dropdown menu (use JS to add this class to the .dropdown-content container when the user clicks on the dropdown button) */
-.show {display:block; transition: 0.25s;}
-
-.p2 {
-  text-align: left;
-  font-size: 10px;
-  margin-left: 10px;
-  font-weight: 600;
-}
-
-.dropdown-content a::selection {
-  background: none;
-}
-.dropdown-content p::selection {
-  background: none;
-}
-.dropdown-content br::selection {
-  background: none;
-}
-.dropdown-content p {
-  cursor: default;
-}
-
-input {
-  transition: 0.25s;
-}
-
-
-
-
-
-
-/* for smartphones */
-
-.topnav a#active {
-  display: none;
-}
-
-#demo4 {
-    float: left;
-    margin-top: 14px;
-    margin-right: 30px;
-    cursor: pointer;
-    color: red;
-    font-size: 10px;
-}
-
-.p3 {
-  opacity: 1;
-  text-align: left;
-  font-size: 10px;
-  margin-left: 10px;
-  font-weight: 300;
-  color: grey;
-}
-.p3::selection {
-  color: white;
-  background: none;
-}
-
-.para {
-  width: 200px;
-}
-
-.shadows-gameprev {
-  border: #242f42 1px solid;
-  border-radius: 20px;
-  width: 559px;
-
-  padding: 10px;
-}
-
-.a3 {
-  text-decoration: none;
-  color: #3196e8;
-  font-weight: 200;
-  cursor: pointer;
-  transition: 0.25s;
-}
-.a3:hover {
-  margin-left: 7px;
+#this {
+    border-bottom: 1px solid rgb(53, 124, 255);
 }
