--- a/style.css
+++ b/style.css
@@ -80,3 +80,31 @@ p {
 #this {
     border-bottom: 1px solid rgb(53, 124, 255);
 }
+
+.footer {
+    bottom: 0;
+    padding: 16px;
+    background: rgb(15, 15, 15);
+}
+.footer-column a {
+    color: rgb(6, 111, 231);
+    font-weight: 200;
+    font-family: sans-serif;
+    font-size: 12px;
+    display: grid;
+}
+.footer-column a:hover {
+    text-decoration: underline;
+}
+.footer-column {
+    display: inline-block;
+}
+.column-name {
+    color: rgb(255, 255, 255);
+    font-size: 12px;
+    font-weight: 300;
+}
+
+.center {
+    text-align: center;
+}
