--- a/style.css
+++ b/style.css
@@ -83,18 +83,25 @@ p {
 
 .footer {
     bottom: 0;
-    padding: 16px;
-    background: rgb(15, 15, 15);
+    padding: 20px;
+    background: rgb(29, 29, 29);
+    text-align: center;
 }
 .footer-column a {
-    color: rgb(6, 111, 231);
+    color: rgb(255, 255, 255);
     font-weight: 200;
-    font-family: sans-serif;
+    font-family: Verdana;
     font-size: 12px;
     display: grid;
+    border-bottom: 1px solid rgb(46, 46, 46);
+    cursor: pointer;
+    padding: 15px;
+    text-decoration: none;
+    transition: 0.25s;
+    width: 100px;
 }
 .footer-column a:hover {
-    text-decoration: underline;
+    border-bottom: 1px solid rgb(63, 63, 63);
 }
 .footer-column {
     display: inline-block;
@@ -103,8 +110,4 @@ p {
     color: rgb(255, 255, 255);
     font-size: 12px;
     font-weight: 300;
-}
-
-.center {
-    text-align: center;
 }
