--- a/style.css
+++ b/style.css
@@ -111,3 +111,13 @@ p {
     font-size: 12px;
     font-weight: 300;
 }
+
+@-webkit-keyframes animatebottom {
+  from { opacity:0 } 
+  to { opacity:1 }
+}
+
+@keyframes animatebottom { 
+  from{ opacity:0 } 
+  to{ opacity:1 }
+}
