--- a/style.css
+++ b/style.css
@@ -32,6 +32,7 @@ p {
     margin-right: 10px;
     cursor: pointer;
     border: 1px solid rgb(56, 56, 56);
+    animation: animatebottom 0.30s linear;
 }
 .container:hover {
     width: 289;
