--- a/style.css
+++ b/style.css
@@ -69,6 +69,8 @@ p {
 }
 .link-nav:focus {
     border: 1px solid rgb(53, 124, 255);
+    background: 1px solid rgb(53, 124, 255);
+    color:white;
 }
 
 #title:hover {
