--- a/style.css
+++ b/style.css
@@ -65,7 +65,7 @@ p {
     padding: 11px;
 }
 .link-nav:hover {
-    border-bottom-color: rgb(53, 124, 255);
+    color: rgb(53, 107, 206);
 }
 .link-nav:focus {
     border: 1px solid rgb(53, 124, 255);
