--- a/style.css
+++ b/style.css
@@ -69,7 +69,7 @@ p {
 }
 .link-nav:focus {
     border: 1px solid rgb(53, 124, 255);
-    background: 1px solid rgb(53, 124, 255);
+    background: rgb(53, 124, 255);
     color:white;
 }
 
